show card type on blur

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -13,8 +13,9 @@
         <div class="fieldset__fields">
 
             <div class="form-field">
-                <label class="label" for="cc-num">Card Number</label>
-                <div class="input">
+                <label class="label" for="cc-num">Card Number </label>
+                <div class="input input-cc-num">
+                    <span class="form__card-type"></span>
                     <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number"/>
                 </div>
             </div>
