--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -2,7 +2,7 @@
 
 <form action="" method="POST" id="payment-form" class="form js-stripe-form">
 
-    <div class="js-payment-errors form__error hide"></div>
+    <div class="js-payment-errors form__error is-hidden"></div>
 
     <fieldset class="fieldset">
         <div class="fieldset__heading">
@@ -14,16 +14,16 @@
 
             <div class="form-field">
                 <label class="label" for="cc-num">Card Number </label>
-                <div class="input input-cc-num">
-                    <span class="form__card-type"></span>
-                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number"/>
+                <div class="input credit-card-container">
+                    <i class="js-credit-card-image credit-card"></i>
+                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="0000 0000 0000 0000" maxlength="19" autocomplete="off"/>
                 </div>
             </div>
 
             <div class="form-field">
                 <label class="label" for="cc-cvc">
-                    <span>CVC</span>
-                    <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4" data-error-message="Please enter a valid CVC number"/>
+                    <span>Security code</span>
+                    <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small text-input--block" id="cc-cvc" placeholder="CVC" maxlength="4" autocomplete="off"/>
                 </label>
             </div>
 
@@ -31,7 +31,7 @@
                 <label class="label" for="cc-exp-month">
                     <span>Expiration (MM/YYYY)</span>
                     <p>
-                        <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month" data-error-message="Please enter a valid Expiry">
+                        <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month">
                             <option selected="selected">Month</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -47,28 +47,28 @@
                             <option value="12">12</option>
                         </select>
                         <span> / </span>
-                        <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year" data-error-message="Please enter a valid Expiry">
+                        <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year">
                             <option selected="selected">Year</option>
-                            <option value="2014">2014</option>
-                            <option value="2015">2015</option>
-                            <option value="2016">2016</option>
-                            <option value="2017">2017</option>
-                            <option value="2018">2018</option>
-                            <option value="2019">2019</option>
-                            <option value="2020">2020</option>
-                            <option value="2021">2021</option>
-                            <option value="2022">2022</option>
-                            <option value="2023">2023</option>
-                            <option value="2024">2024</option>
-                            <option value="2025">2025</option>
-                            <option value="2026">2026</option>
-                            <option value="2027">2027</option>
-                            <option value="2028">2028</option>
-                            <option value="2029">2029</option>
-                            <option value="2030">2030</option>
-                            <option value="2031">2031</option>
-                            <option value="2032">2032</option>
-                            <option value="2033">2033</option>
+                            <option value="2014">14</option>
+                            <option value="2015">15</option>
+                            <option value="2016">16</option>
+                            <option value="2017">17</option>
+                            <option value="2018">18</option>
+                            <option value="2019">19</option>
+                            <option value="2020">20</option>
+                            <option value="2021">21</option>
+                            <option value="2022">22</option>
+                            <option value="2023">23</option>
+                            <option value="2024">24</option>
+                            <option value="2025">25</option>
+                            <option value="2026">26</option>
+                            <option value="2027">27</option>
+                            <option value="2028">28</option>
+                            <option value="2029">29</option>
+                            <option value="2030">30</option>
+                            <option value="2031">31</option>
+                            <option value="2032">32</option>
+                            <option value="2033">33</option>
                         </select>
                     </p>
                 </label>
@@ -83,7 +83,7 @@
         </div>
         <div class="fieldset__fields">
             <div class="actions top">
-                <button type="submit" class="submit-input default-action">Subscribe</button>
+                <button type="submit" class="submit-input default-action js-submit-input">Subscribe</button>
             </div>
         </div>
     </fieldset>
