Tests are important

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -103,7 +103,7 @@
             <div class="form-field">
                 <label class="label required-marker" for="cc-num">Card Number
                     <div class="input credit-card-container">
-                        <i class="js-credit-card-image credit-card"></i>
+                        <i class="js-credit-card-image credit-card icon-sprite icon-sprite-card-unknown"></i>
                         <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input"
                                id="cc-num" placeholder="0000 0000 0000 0000" maxlength="19" autocomplete="off"
                                data-validation="creditCardNumber">
