removed references to images

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -96,7 +96,7 @@
             <div class="form__note">
                 <p>We accept all major cards</p>
 
-                <p><img src="/assets/images/padlock.png" alt="" class="form-padlock"> This form is secure</p></div>
+                <p><img src="" alt="" class="form-padlock"> This form is secure</p></div>
         </div>
 
         <div class="fieldset__fields">
@@ -263,7 +263,7 @@
         <div class="fieldset__fields">
             <div class="actions js-waiting-container">
                 <button type="submit" class="submit-input action--logged-in js-submit-input">Join now</button>
-                <div class="i-wait"><img src="/assets/images/wait.gif" alt=""></div>
+                <div class="i-wait"><img src="" alt=""></div>
             </div>
         </div>
     </fieldset>
