--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -73,8 +73,8 @@
         </div>
 
         <div class="form-field js-county-section">
-            <label class="label" for="county-deliveryAddress">County</label>
-            <input type="text" name="deliveryAddress.countyOrState" value="" id="county-deliveryAddress" class="text-input text-input--block js-county-state">
+            <label class="label" for="county-or-state-deliveryAddress">County</label>
+            <input type="text" name="deliveryAddress.countyOrState" value="" id="county-or-state-deliveryAddress" class="text-input text-input--block js-county-state">
         </div>
 
         <div class="form-field address-fieldset__country u-h">
@@ -255,8 +255,8 @@
         </div>
 
         <div class="form-field js-county-section">
-            <label class="label" for="county-billingAddress">County</label>
-            <input type="text" name="deliveryAddress.countyOrState" value="" id="county-billingAddress" class="text-input text-input--block js-county-state">
+            <label class="label" for="county-or-state-billingAddress">County</label>
+            <input type="text" name="deliveryAddress.countyOrState" value="" id="county-or-state-billingAddress" class="text-input text-input--block js-county-state">
         </div>
 
         <div class="form-field address-fieldset__country u-h">
