typo in fixtures

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -106,10 +106,10 @@
         </div>
 
         <div class="form-field address-fieldset__country u-h">
-            <label class="label" for="provence-deliveryAddress">Provence</label>
+            <label class="label" for="province-deliveryAddress">Provence</label>
             <div class="input">
                 <select name="deliveryAddress.countyOrState"
-                        id="provence-deliveryAddress"
+                        id="province-deliveryAddress"
                         data-error-message="Please enter your Provence"
                         data-validation="required">
                     <option value="Alberta">Alberta</option>
@@ -289,10 +289,10 @@
 
 
         <div class="form-field address-fieldset__country u-h">
-            <label class="label" for="provence-billingAddress">Provence</label>
+            <label class="label" for="province-billingAddress">Provence</label>
             <div class="input">
                 <select name="billingAddress.countyOrState"
-                        id="provence-billingAddress"
+                        id="province-billingAddress"
                         data-error-message="Please enter your Provence"
                         data-validation="required">
                     <option value="Alberta">Alberta</option>
