removed png references in fixtures

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -129,7 +129,7 @@
     <div class="fieldset__heading">
         <h2 class="form__heading">Card details</h2>
         <div class="form__note js-card-details-note">
-            <p><img src="/assets/images/padlock.png" alt="" class="form-padlock"> This site is secure</p>
+            <p><img src="" alt="" class="form-padlock"> This site is secure</p>
             <p class="credit-card-note"><span class="credit-card-note__header">First payment</span> will be taken today under the name Guardian News &amp; Media.</p>
             <p class="credit-card-note"><span class="credit-card-note__header">Ongoing payments</span>
 
@@ -174,7 +174,7 @@
             <a class="cvc-cta js-cvc-cta" href="#">Whats this?</a>
             <div class="cvc u-cf js-cvc-image-container u-h">
                 <div class="cvc__primary">
-                    <img src="/assets/images/form/cvc-card.png" alt="CVC explanation">
+                    <img src="" alt="CVC explanation">
                 </div>
                 <div class="cvc__secondary">
                     <h3 class="cvc__heading">Visa, Mastercard</h3>
@@ -183,7 +183,7 @@
                     </p>
                 </div>
                 <div class="cvc__primary">
-                    <img src="/assets/images/form/cvc-card-american-express.png" alt="CVC explanation American Express">
+                    <img src="" alt="CVC explanation American Express">
                 </div>
                 <div class="cvc__secondary">
                     <h3 class="cvc__heading">American Express</h3>
