Upgrade.js/JoinForm.js no longer need to be separate

--- a/frontend/test/fixtures/form.fixture.html
+++ b/frontend/test/fixtures/form.fixture.html
@@ -1,7 +1,7 @@
 <!-- This is a representation of the form once JavaScript has detached the following elements,
      billing Address details,
      state and provence selects for delivery and billing address
-     This mock is just for testing form functionality, separate tests can be found in JoinPaidForm.spec
+     This mock is just for testing form functionality, separate tests can be found in PaidForm.spec
      for further form testing
 -->
 <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form">
