Remove redundant action classes

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -377,7 +377,7 @@
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
         <div class="actions js-waiting-container">
-            <button type="submit" class="submit-input action action--logged-in js-submit-input">
+            <button type="submit" class="submit-input action action--join js-submit-input">
                 Pay £<span class="js-cta-payment-option-price">15</span> now
             </button>
             <div class="i-wait"><img src="" alt=""></div>
