form field adjustments and error alart styling

--- a/frontend/test/fixtures/form.fixture.html
+++ b/frontend/test/fixtures/form.fixture.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-field">
-            <label class="label" for="address-line-two">Address line 2</label>
+            <label class="label optional-marker" for="address-line-two">Address line 2</label>
             <input type="text" name="deliveryAddress.lineTwo" id="address-line-two"
                    class="text-input text-input--block js-address-line-two">
         </div>
