--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-field">
-            <label class="label" for="address-line-two">Address line 2</label>
+            <label class="label optional-marker" for="address-line-two">Address line 2</label>
             <input type="text" name="deliveryAddress.lineTwo" id="address-line-two"
                    class="text-input text-input--block js-address-line-two">
         </div>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="form-field">
-            <label class="label" for="county-or-state">County or State</label>
+            <label class="label optional-marker" for="county-or-state">County or State</label>
             <input type="text" name="deliveryAddress.countyOrState" id="county-or-state"
                    class="text-input text-input--block js-county-state">
         </div>
