Remove references to icon-sprite

--- a/frontend/test/fixtures/paymentForm.fixture.html
+++ b/frontend/test/fixtures/paymentForm.fixture.html
@@ -152,19 +152,19 @@
                             We accept
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-visa"></i>
+                            <i class="credit-card credit-card--form-field-note icon-sprite-card-visa"></i>
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-mastercard"></i>
+                            <i class="credit-card credit-card--form-field-note icon-sprite-card-mastercard"></i>
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-american-express"></i>
+                            <i class="credit-card credit-card--form-field-note icon-sprite-card-american-express"></i>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="credit-card-container">
-                <i class="js-credit-card-image credit-card credit-card--input-representation icon-sprite icon-sprite-card-unknown"></i>
+                <i class="js-credit-card-image credit-card credit-card--input-representation icon-sprite-card-unknown"></i>
                 <input type="tel" size="20" data-stripe="number" class="js-credit-card-number credit-card-input text-input" id="cc-num" placeholder="0000 0000 0000 0000" maxlength="19" autocomplete="off" data-validation="creditCardNumber">
             </div>
 
